--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/ico" href="/icon_ECG_seeds.png" />
+    <link rel="icon" type="image/png" href="/icon_ECG_seeds.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ECG Calculator</title>
   </head>
